Fixing overflowed by picture corners of the card

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -15,6 +15,7 @@
     width: 100%;
     backface-visibility: hidden;
     border-radius: 3px;
+    overflow: hidden;
     box-shadow: $default-box-shadow;
 
     &--front {
